@@ -5,6 +5,7 @@
 from aptdaemon import client, errors
 from defer import inline_callbacks
 from aptdaemon.gtkwidgets import AptProgressDialog
+from aptdaemon.enums import EXIT_SUCCESS
 
 from UpdateManager.backend import InstallBackend
 import apt_pkg
@@ -26,11 +27,11 @@ class InstallBackendAptdaemon(InstallBackend):
             pass
         try:
             trans = yield self.client.update_cache(defer=True)
-            self._run_in_dialog(trans, self.UPDATE)
+            yield self._run_in_dialog(trans, self.UPDATE)
         except errors.NotAuthorizedError:
-            self.emit("action-done", self.UPDATE, False)
+            self.emit("action-done", self.UPDATE, False, False)
         except:
-            self.emit("action-done", self.UPDATE, True)
+            self.emit("action-done", self.UPDATE, True, False)
             raise
 
     @inline_callbacks
@@ -41,15 +42,15 @@ class InstallBackendAptdaemon(InstallBackend):
         except SystemError:
             pass
         try:
-            reinstall = remove = purge = upgrade = downgrade = []
+            reinstall = remove = purge = downgrade = []
             trans = yield self.client.commit_packages(
                 pkgs_install, reinstall, remove, purge, pkgs_upgrade, 
                 downgrade, defer=True)
             self._run_in_dialog(trans, self.INSTALL)
         except errors.NotAuthorizedError:
-            self.emit("action-done", self.INSTALL, False)
+            self.emit("action-done", self.INSTALL, False, False)
         except:
-            self.emit("action-done", self.INSTALL, True)
+            self.emit("action-done", self.INSTALL, True, False)
             raise
 
     def _run_in_dialog(self, trans, action):
@@ -60,4 +61,5 @@ class InstallBackendAptdaemon(InstallBackend):
 
     def _on_finished(self, dialog, action):
         dialog.hide()
-        self.emit("action-done", action, True)
+        self.emit("action-done", action, 
+                  True, dialog._transaction.exit == EXIT_SUCCESS)
