@@ -1,6 +1,7 @@
 update-manager (1:0.145.9) natty; urgency=low
 
   * fix FTBFS
+  * improve install-backend error checking
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 09 Dec 2010 15:13:38 +0100
 
